--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
-html
-  head
-    title= "URL Shortener"
-  body
+extends layout.pug
+
+block title
+  title= "URL Shortener - Home"
+
+block content
     h1= "Usage"
     p= message
