--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,6 @@ block title
   title= "URL Shortener - Home"
 
 block content
-    h1= "Usage"
-    p= message
+    h1= "How to get your own shortened URL:"
+    p= "1) Enter a valid web address to (appurl)/new/yourwebaddress, substituting yourwebaddress for the address you want shortened. Make sure that your web address includes http/https:// at the beginning of it!"
+    p= "2) Your new URL will be displayed on the resulting page!"
