improved clarity of intsructions with an example

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,3 +7,6 @@ block content
     h1= "How to get your own shortened URL:"
     p= "1) Enter a valid web address to (appurl)/new/yourwebaddress, substituting yourwebaddress for the address you want shortened. Make sure that your web address includes http/https:// at the beginning of it!"
     p= "2) Your new URL will be displayed on the resulting page!"
+    h1= "Example:"
+    p= "Enter: https://supershorturl.herokuapp.com/new/https://www.google.com"
+    p= "New url: https://supershorturl.herokuapp.com/48897"
